--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "12.1.0",
     "next-themes": "^0.1.1",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-quilljs": "^1.3.0",
     "sass": "^1.49.9",
     "swr": "^1.2.2"
   },
