--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -20,6 +21,7 @@
     "swr": "^1.2.2"
   },
   "devDependencies": {
+    "cypress": "^10.3.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0"
   }
