--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cypress": "cypress open"
+    "opencypress": "cypress open",
+    "cypress": "cypress run"
+
   },
   "dependencies": {
     "axios": "^0.27.2",
