--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -11,4 +11,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
+      - run: npm install
+      - run: npm run build
+      - run: npm run start
       - run: npm run cypress run-ct
