--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,5 +13,5 @@ jobs:
       - run: npm ci
       - run: npm install
       - run: npm run build
-      - run: npm run start
+      - run: npm run start &
       - run: npm run cypress run-ct
