--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint",
     "opencypress": "cypress open",
     "cypress": "cypress run"
-
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "js-cookie": "^3.0.1",
     "next": "12.1.0",
     "next-themes": "^0.1.1",
     "quill": "^1.3.7",
