--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.0",
     "next-themes": "^0.1.1",
     "quill": "^1.3.7",
+    "quill-delta-to-html": "^0.12.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-quilljs": "^1.3.0",
